# capnproto-demo

./: Cargo.toml  README.md
src/: client.rs  main.rs  server.rs
src/schema/: point.capnp  point_capnp.rs
